# rustnlp

./: .gitignore  CALLBACK_SYSTEM.md  Cargo.toml  README.md  TASK_USAGE_GUIDE.md  TEST_SUMMARY.md  build_handlers.sh  demo_udp.sh  generate_handlers.sh  test_api.sh  test_handlers.sh
doc/: CALLBACK_HANDLERS.md  HANDLERS_SUMMARY.md  README.md  api.md  examples.md  index.md  troubleshooting.md
docs/: development.md  index.md  installation.md  readme.md  udp-broadcast-legacy.md
examples/: client_discovery.rs  client_multi_discovery.rs  client_request_discovery.rs
src/: callbacks.rs  lib.rs  main.rs  nlp.rs  udp_broadcast.rs
