[package]
name = "rustlm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# For basic text processing (we'll implement simple NLP without heavy ML dependencies for now)
regex = "1.0"

# For Azure OpenAI integration
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }

# For UDP broadcast functionality
network-interface = "1.0"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
